--- a/src/pages/AdminRoom/styles.scss
+++ b/src/pages/AdminRoom/styles.scss
@@ -107,6 +107,15 @@
 
     .question-list {
       margin-top: 32px;
+
+      .question {
+        footer {
+          > div {
+            display: flex;
+            gap: 16px;
+          }
+        }
+      }
     }
   }
 }
